--- a/RoutinePlan/app/src/main/res/layout/activity_splash.xml
+++ b/RoutinePlan/app/src/main/res/layout/activity_splash.xml
@@ -18,7 +18,7 @@
       android:fontFamily="sans-serif-light"
       android:text="@string/app_name"
       android:textColor="@android:color/black"
-      android:textSize="34sp"
+      android:textSize="@dimen/tv_splash"
       />
 
 </RelativeLayout>
