--- a/RoutinePlan/app/src/main/res/layout/item_widget.xml
+++ b/RoutinePlan/app/src/main/res/layout/item_widget.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/routine_item"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/list_item_size"
     android:background="@android:color/white"
-    android:orientation="horizontal"
     >
 
   <TextView
       android:id="@+id/text_view_routine_name"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:fontFamily="sans-serif-light"
-      android:padding="12dip"
-      android:text="Some Text"
+      android:layout_gravity="center_vertical"
+      android:layout_marginLeft="@dimen/default_margin"
+      android:layout_marginStart="@dimen/default_margin"
+      android:fontFamily="sans-serif"
       android:textColor="@android:color/black"
-      android:textSize="20sp"
+      android:textSize="@dimen/tv_size_normal"
       />
 
-
-</LinearLayout>
+</RelativeLayout>
