--- a/RoutinePlan/app/src/main/res/values/dimens.xml
+++ b/RoutinePlan/app/src/main/res/values/dimens.xml
@@ -4,4 +4,14 @@
   <dimen name="activity_vertical_margin">16dp</dimen>
   <dimen name="fab_margin">16dp</dimen>
   <dimen name="default_margin">16dp</dimen>
+  <dimen name="tv_large">46sp</dimen>
+  <dimen name="tv_heading">24sp</dimen>
+  <dimen name="list_item_size">60dp</dimen>
+  <dimen name="medium_padding">10dp</dimen>
+  <dimen name="tv_splash">34sp</dimen>
+  <dimen name="list_item_size_small">52dp</dimen>
+  <dimen name="tv_size_normal">16sp</dimen>
+  <dimen name="list_item_size_large">72dp</dimen>
+  <dimen name="reveal_button_width">70dp</dimen>
+  <dimen name="color_row_width">300dp</dimen>
 </resources>
