--- a/RoutinePlan/app/src/main/res/values/styles.xml
+++ b/RoutinePlan/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
   <color name="redColorPrimary">#d80039</color>
 
   <!-- Base application theme. -->
-  <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+  <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     <!-- Customize your theme here. -->
     <item name="colorPrimary">@color/redColorPrimary</item>
     <item name="colorPrimaryDark">@color/redColorPrimaryDark</item>
