--- a/RoutinePlan/app/src/main/res/layout/activity_container.xml
+++ b/RoutinePlan/app/src/main/res/layout/activity_container.xml
@@ -9,5 +9,20 @@
     tools:context=".activity.ContainerActivity"
     >
 
+  <android.support.design.widget.AppBarLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/app_bar"
+      >
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/main_tool_bar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        />
+
+  </android.support.design.widget.AppBarLayout>
 
 </LinearLayout>
