--- a/RoutinePlan/app/src/main/res/layout/activity_play.xml
+++ b/RoutinePlan/app/src/main/res/layout/activity_play.xml
@@ -11,16 +11,24 @@
       android:orientation="vertical"
       >
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/mainToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        />
 
 
     <TextView
         android:id="@+id/text_view_timer"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textSize="@dimen/tv_large"
         android:fontFamily="sans-serif-light"
-        android:text="00:00:00"
+        android:text="@string/time_zeros"
         />
 
 
@@ -69,6 +77,7 @@
           android:foreground="?attr/selectableItemBackground"
           android:background="?attr/colorPrimaryDark"
           android:id="@+id/pause"
+          android:contentDescription="@string/pause_routine"
           />
 
       <ImageView
@@ -80,6 +89,7 @@
           android:id="@+id/cancel"
           android:src="@drawable/ic_cancel"
           android:padding="@dimen/medium_padding"
+          android:contentDescription="@string/cancel_routine"
           />
     </LinearLayout>
   </RelativeLayout>
