--- a/RoutinePlan/app/src/main/res/layout/item_widget.xml
+++ b/RoutinePlan/app/src/main/res/layout/item_widget.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/routine_item"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/list_item_size"
-    android:background="@android:color/white"
+    android:id="@+id/item_routine"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     >
 
   <TextView
       android:id="@+id/text_view_routine_name"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center_vertical"
-      android:layout_marginLeft="@dimen/default_margin"
-      android:layout_marginStart="@dimen/default_margin"
       android:fontFamily="sans-serif"
+      android:padding="@dimen/default_margin"
       android:textColor="@android:color/black"
-      android:textSize="@dimen/tv_size_normal"
+      android:textSize="@dimen/tv_size_small"
       />
 
-</RelativeLayout>
+</LinearLayout>
