--- a/RoutinePlan/app/src/main/res/values/dimens.xml
+++ b/RoutinePlan/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
   <dimen name="list_item_size_large">72dp</dimen>
   <dimen name="reveal_button_width">70dp</dimen>
   <dimen name="color_row_width">300dp</dimen>
+  <dimen name="tv_size_small">12sp</dimen>
 </resources>
